2003-06-25  Ulrich Drepper  <drepper@redhat.com>

	* include/time.h: Don't define CLOCK_IDFIELD_SIZE if _ISOMAC is
	defined.

2003-06-11  Jakub Jelinek  <jakub@redhat.com>

	* elf/Versions (libc): Add _dl_open_hook@GLIBC_PRIVATE.
	* elf/dl-libc.c (struct dl_open_hook): New.
	(_dl_open_hook): New variable.
	(do_dlsym_private): New function.
	(__libc_dlopen_mode) [!SHARED]: Lookup _dl_open_hook@GLIBC_PRIVATE
	and initialize it if found.
	(__libc_dlopen_mode) [SHARED]: If _dl_open_hook is non-NULL,
	call dlopen_mode hook.
	(__libc_dlsym) [SHARED]: If _dl_open_hook is non-NULL,
	call dlsym hook.
	(__libc_dlclose) [SHARED]: If _dl_open_hook is non-NULL,
	call dlclose hook.

2003-06-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/cris/sysdep.h (INLINE_SYSCALL): Cast
	result to long int so that extensions to long long int work.
	Patch by Uwe Reimann <libc-alpha@pulsar.homelinux.net>.

2003-06-19  Jakub Jelinek  <jakub@redhat.com>

	* elf/ldconfig.c (main): Use add_system_dir instead of add_dir.
	* sysdeps/generic/dl-cache.h (add_system_dir): Define.
	* sysdeps/unix/sysv/linux/x86_64/dl-cache.h: Include sparc
	dl-cache.h.
	* sysdeps/unix/sysv/linux/s390/dl-cache.h: New file.
	* sysdeps/unix/sysv/linux/mips/dl-cache.h: New file.
	* sysdeps/unix/sysv/linux/powerpc/dl-cache.h: New file.
	* sysdeps/unix/sysv/linux/sparc/dl-cache.h: New file.

2003-06-19  Jakub Jelinek  <jakub@redhat.com>

	* test-skeleton.c (timeout_handler): If waitpid returned 0,
	retry once after a second.  If killed == 0, assume
	WTERMSIG (status) == SIGKILL.

2003-06-18  Roland McGrath  <roland@redhat.com>

	* sysdeps/generic/dl-sysdep.c (_dl_show_auxv): Catch uninitialized
	elements in the table instead of printing an empty name string.

2003-06-05  Roland McGrath  <roland@redhat.com>

	* elf/elf.h (PT_GNU_STACK): New macro.

2003-06-24  Ulrich Drepper  <drepper@redhat.com>

	* include/time.h: Define CLOCK_IDFIELD_SIZE.
	* sysdeps/posix/clock_getres.c: Recognize thread CPU clock IDs.